Apply data structure improvements